--- a/styles/main.css
+++ b/styles/main.css
@@ -1,17 +1,24 @@
 html {
         font-family: 'Roboto', sans-serif;
       }
-header{
+#page-home{
+    background: url('../assets/Home.svg')no-repeat;
+
+    
+}
+
+#page-home .content{
+
+    width: 90%;
+    max-width: 1100px;
+    margin: 0 auto;
+} 
+#page-home header{
 
     display: flex;
     align-items: center;
     justify-content: space-between;
 
 }
-.content{
 
-    width: 90%;
-    max-width: 1100px;
-    margin: 0 auto;
-} 
  
